fixed errror with nav bar where it wouldn't cover the whole width of the screen on small screens

--- a/client/src/components/shared/Nav/Nav.css
+++ b/client/src/components/shared/Nav/Nav.css
@@ -60,9 +60,6 @@ nav {
   font-weight: bold;
 }
 @media (max-width: 500px) {
-  nav {
-    width: 98%;
-  }
   .logo {
     max-width: 50%;
   }
